tsconfig: compile with noImplicitReturns

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "removeComments": true,
         "preserveConstEnums": true,
+        "noImplicitReturns": true,
         "outDir": "js"
     },
 
