--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "removeComments": true,
         "preserveConstEnums": true,
         "noImplicitReturns": true,
+        "skipLibCheck": true,
         "outDir": "js"
     },
 
