--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,6 +48,8 @@
         "src/saveload.ts",
         "src/idbcache.ts",
 
+        "src/events.ts",
+
         "src/net.ts",
 
         "src/main.ts"
