--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
         
         "src/criticalEffects.ts",
         "src/skillDependencies.ts",
-        "src/characterCreation.ts",
+        "src/char.ts",
 
         "src/data.ts",
         "src/worldmap.ts",
