--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "noImplicitReturns": true,
         "alwaysStrict": true, // emit "use strict"
         "skipLibCheck": true,
-        // "noImplicitAny": true,
+        "noImplicitAny": true,
         "outDir": "js",
         // "target": "es6",
         "lib": ["es6", "dom", "es2017.object"]
