--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "noImplicitThis": true,
         "outDir": "js",
         // "target": "es6",
+        // "strict": true,
         "lib": ["es6", "dom", "es2017.object"]
     },
 
